fixed burger z-index

--- a/styles/components/findbox.scss
+++ b/styles/components/findbox.scss
@@ -6,7 +6,7 @@
     left: 0;
 
     background: rgba(0, 46, 72, 0.9);
-    z-index: 11;
+    z-index: 9999;
     transition: transform 0.3s ease;
 
     .toggle-find-btn {
