--- a/styles/index.scss
+++ b/styles/index.scss
@@ -104,7 +104,7 @@
     cursor: pointer;
     display: none;
     padding: 0;
-    z-index: 99999999999;
+    z-index: 999;
 }
 
 .line {
@@ -158,7 +158,7 @@
     justify-content: center;
     position: fixed;
     background-color: #fff;
-    z-index: 9999;
+    z-index: 999;
     .burger-nav-list {
         max-width: 300px;
         margin-bottom: 65px;
